--- a/templates/page.contact.liquid
+++ b/templates/page.contact.liquid
@@ -104,8 +104,7 @@
                         </div>
                         <div class="info-content">
                             <h3>Email</h3>
-                            <p><a href="mailto:support@lovebrands.com">support@lovebrands.com</a></p>
-                            <p><a href="mailto:info@lovebrands.com">info@lovebrands.com</a></p>
+                            <p><a href="mailto:support@lovepaks.com">support@lovepaks.com</a></p>
                         </div>
                     </div>
 
@@ -117,8 +116,7 @@
                         </div>
                         <div class="info-content">
                             <h3>Phone</h3>
-                            <p><a href="tel:+18001234567">1-800-123-4567</a></p>
-                            <p class="info-note">Monday - Friday, 9am - 5pm EST</p>
+                            <p><a href="tel:+16086785683">608-678-LOVE</a></p>
                         </div>
                     </div>
 
@@ -132,26 +130,13 @@
                         <div class="info-content">
                             <h3>Address</h3>
                             <p>
-                                Love Brands<br>
-                                123 Wellness Street<br>
-                                Los Angeles, CA 90001<br>
-                                United States
+                                2980 South Rainbow Blvd.<br>
+                                Las Vegas, NV 89146
                             </p>
                         </div>
                     </div>
                 </div>
 
-                <!-- Quick Links -->
-                <div class="quick-links">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="/pages/mastercase">Become a Partner</a></li>
-                        <li><a href="/pages/products">View Products</a></li>
-                        <li><a href="/pages/faq">FAQ</a></li>
-                        <li><a href="/pages/shipping">Shipping Information</a></li>
-                        <li><a href="/pages/returns">Returns & Refunds</a></li>
-                    </ul>
-                </div>
             </div>
         </div>
     </div>
