--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -29,6 +29,8 @@
                 <h4 class="footer-section-title">Support</h4>
                 <div class="footer-links">
                     <a href="/pages/privacy-policy" class="footer-link">Privacy Policy</a>
+                    <a href="/pages/shipping-policy" class="footer-link">Shipping Policy</a>
+                    <a href="/pages/return-refund-policy" class="footer-link">Return & Refund Policy</a>
                     <div id="appstle-subscription-manage-subscription-button-placeholder" class="footer-appstle-manage"></div>
                 </div>
             </div>
