--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -124,7 +124,7 @@
                 <p class="product-subscriber-benefits-title">Subscriber benefits:</p>
                 <ul class="product-subscriber-benefits-list">
                   <li>VIP exclusive perks and early access</li>
-                  <li>Save 20%</li>
+                  <li>Save up to 20%</li>
                   <li>Flexible delivery: Adjust, skip, cancel anytime</li>
                   <li>Free shipping on orders over $75</li>
                 </ul>
