--- a/templates/page.wholesale.liquid
+++ b/templates/page.wholesale.liquid
@@ -147,7 +147,7 @@
                     </svg>
                 </button>
                 <div class="faq-answer">
-                    <p>Defective products can be returned within 30 days for credit. Please refer to our supply agreement for detailed return policies.</p>
+                    <p>Defective products can be returned within 30 days for credit. Please refer to our <a href="/pages/supply-agreement">Supply Agreement</a> for detailed return policies.</p>
                 </div>
             </div>
 
