--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -31,6 +31,8 @@
                     <a href="/pages/privacy-policy" class="footer-link">Privacy Policy</a>
                     <a href="/pages/shipping-policy" class="footer-link">Shipping Policy</a>
                     <a href="/pages/return-refund-policy" class="footer-link">Return & Refund Policy</a>
+                    <a href="/pages/supply-agreement" class="footer-link">Supply Agreement</a>
+                    <a href="/pages/ecommerce-agreement" class="footer-link">E-commerce Agreement</a>
                     <div id="appstle-subscription-manage-subscription-button-placeholder" class="footer-appstle-manage"></div>
                 </div>
             </div>
